@@ -4,4 +4,8 @@
   :license {:name "Eclipse Public License"
             :url "http://www.eclipse.org/legal/epl-v10.html"}
   :dependencies [[org.clojure/clojure "1.8.0"]
-                 [korma "0.4.3"]])
+                 [default/spark-jdbc_2.11 "0.0.1-SNAPSHOT"]
+                 [korma "0.4.3"]]
+  :jvm-opts ["-Xmx1024m" "-XX:MaxPermSize=256m"]
+  :java-cmd "/usr/bin/java"
+  )
